# factoryPractice

factory/: pyproject.toml
factory/factory/: __init__.py
factory/factory/CLI/: cli.py
factory/factory/models/: __init__.py  mathModels.py
factory/tests/: test_factory.py
