[tool.poetry]
name = "factory"
version = "0.1.0"
description = ""
authors = ["Spencer Clemens <Soclemens@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
spencerMath = "factory.CLI.cli:main"
